Bug 766696 - Allow the MessagePump to process multiple pieces of idle work in a row. r=blassey